PP-12413: Update OpenAPI spec